cmake_minimum_required(VERSION 3.15)
project(LeetCode)

set(CMAKE_CXX_STANDARD 14)

add_executable(LeetCode main.cpp h0088.h h0215.h h0167.h h0125.h h0345.h h0011.h h0209.h h0003.h h0438.h h0076.h h0349.h h0350.h h0143.h h0206.h h0092.h h0242.h h0202.h h0290.h h0205.h h0451.h h0015.h h0018.h h0016.h h0083.h h0086.h h0454.h h0049.h h0447.h h0149.h)