cmake_minimum_required(VERSION 3.15)
project(LeetCode)

set(CMAKE_CXX_STANDARD 14)

add_executable(LeetCode main.cpp h0088.h h0215.h h0167.h h0125.h h0345.h h0011.h h0209.h h0003.h h0438.h h0076.h h0349.h h0350.h h0143.h h0206.h h0092.h h0242.h h0202.h h0290.h h0205.h h0451.h h0015.h h0018.h h0016.h h0083.h h0086.h h0454.h h0049.h h0447.h h0149.h h0217.h h0219.h h0328.h h0445.h h0203.h pdd3.h h0082.h h0021.h h0024.h h0025.h h0147.h h0148.h h0019.h h0069.h h0234.h h0020.h h0150.h h0071.h google3.h h0102.h h0107.h h0103.h h0199.h h0279.h h0127.h h0347.h h0023.h h0104.h h0226.h h0100.h h0222.h h0101.h h0110.h h0111.h h0112.h h0113.h)